Copyright (C) 2022 LANNOCC (Shawn A. Wilson [lannocc@yahoo.com])
@%@~LICENSE:MIT~@%@

saw_072522_1 - Two-way conversation.

saw_072422_1 - Getting closer (but uglier).

saw_072122_1 - Scrolling text conversation.

saw_071422_1 - Begin to support peer text messaging (still needs work).

saw_071222_1 - A working (test) scrolling text viewer.

saw_071122_3 - Beginning to implement the direct connection panels.

saw_071122_2 - Implemented peer history.

saw_071122_1 - Dynamic peer selection.

saw_071022_6 - Now have a working Labels module.

saw_071022_5 - Add verbose option ('-v' on command-line).

saw_071022_4 - Notifications.

saw_071022_3 - Connect works.

saw_071022_2 - Fix missing page module.

saw_071022_1 - Initial commit.
